@@ -5,3 +5,4 @@ V4_remove_guid_from_device_info.sql
 V5_add_updated_case_column.sql
 V6_add_supported_dialects.sql
 V7_add_contact_reasons.sql
+V8_added_cases_files.sql
